# Na_Avos

./: .gitattributes  .gitignore  README.md  bridge.py  build_windows.spec  index.html  launcher.py  pyproject.toml
.github/workflows/: build.yml
