[project]
name = "na-avos"
version = "1.0.0"
description = "Рандомайзер «На авось» — колесо фортуны, монетка, списки"
requires-python = ">=3.12"
dependencies = [
    "pywebview>=5.3",
]

[dependency-groups]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
na-avos = "launcher:main"

[tool.uv]
package = false
